--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ python:
 before_script:
   - pip install -r requirements.txt
 
-env: DJANGO_SETTINGS_MODULE="settings"
+
 
 services:
   - postgresql
-
+env: DJANGO_SETTINGS_MODULE="settings.travis"
 script:
   - ./manage.py test
